# cheeseboard

./: .gitignore  CHANGELOG.md  README.md  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
docs/: IMPLEMENTATION-PLAN.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: architecture.md  building.md  getting-started.md  how-it-works.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_placeholder.rs
src-tauri/src/: config.rs  main.rs  tray.rs  updater.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  store.rs  thread.rs
