[package]
name = "cheeseboard"
version = "0.1.4"
edition = "2021"
description = "Cross-device clipboard sync, built on truffle mesh networking"
license = "MIT"
repository = "https://github.com/jamesyong-42/cheeseboard"
publish = false

[dependencies]
truffle = "0.3"
open = "5"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
arboard = { version = "3", features = ["wayland-data-control"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
